refactor: remove unused ApiResponse annotations and update response types in RepairOrderController