@@ -9,8 +9,6 @@ import br.com.fiap.tech.challeng.garageflow_soat_17_2026_la.repairorder.presenta
 import br.com.fiap.tech.challeng.garageflow_soat_17_2026_la.repairorder.presentation.dto.response.RepairOrderResponseDTO;
 import br.com.fiap.tech.challeng.garageflow_soat_17_2026_la.repairorder.presentation.mapper.RepairOrderMapper;
 import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import lombok.AllArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -19,7 +17,6 @@ import org.springframework.web.bind.annotation.*;
 import jakarta.validation.Valid;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @RestController
@@ -62,10 +59,6 @@ public class RepairOrderController {
             summary = "Create Repair Order",
             description = "Creates a new repair order."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "201", description = "Repair order created"),
-            @ApiResponse(responseCode = "400", description = "Invalid request")
-    })
     @PostMapping
     public ResponseEntity<?> create(@Valid @RequestBody CreateRepairOrderRequest dto) {
         try {
@@ -81,10 +74,6 @@ public class RepairOrderController {
             summary = "Get Repair Order by ID",
             description = "Retrieves a repair order by its ID."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Repair order found"),
-            @ApiResponse(responseCode = "404", description = "Repair order not found")
-    })
     @GetMapping("/{id}")
     public ResponseEntity<?> getById(@PathVariable String id) {
         try {
@@ -100,13 +89,10 @@ public class RepairOrderController {
             summary = "List All Repair Orders",
             description = "Retrieves a list of all repair orders."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Repair orders found")
-    })
     @GetMapping
     public ResponseEntity<List<RepairOrderResponseDTO>> listAll() {
         List<RepairOrder> list = listAllUseCase.execute();
-        List<RepairOrderResponseDTO> dtos = list.stream().map(mapper::toResponse).collect(Collectors.toList());
+        List<RepairOrderResponseDTO> dtos = list.stream().map(mapper::toResponse).toList();
         return ResponseEntity.ok(dtos);
     }
 
@@ -114,11 +100,8 @@ public class RepairOrderController {
             summary = "Add Workshop Service to Repair Order",
             description = "Adds a workshop service to an existing repair order."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Workshop service added")
-    })
     @PostMapping("/{repairOrderId}/services")
-    public ResponseEntity<?> addWorkshopService(
+    public ResponseEntity<RepairOrderResponseDTO> addWorkshopService(
             @PathVariable String repairOrderId,
             @Valid @RequestBody AddRemoveWorkshopServiceRequest request) {
 
@@ -133,11 +116,8 @@ public class RepairOrderController {
             summary = "Add Part to Repair Order",
             description = "Adds a part to an existing repair order."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Part added")
-    })
     @PostMapping("/{repairOrderId}/parts")
-    public ResponseEntity<?> addPart(
+    public ResponseEntity<RepairOrderResponseDTO> addPart(
             @PathVariable String repairOrderId,
             @Valid @RequestBody AddRemovePartRequest request) {
 
@@ -152,11 +132,8 @@ public class RepairOrderController {
             summary = "Remove Workshop Service from Repair Order",
             description = "Removes a workshop service from an existing repair order."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Workshop service removed")
-    })
     @DeleteMapping("/{repairOrderId}/services")
-    public ResponseEntity<?> removeWorkshopService(
+    public ResponseEntity<RepairOrderResponseDTO> removeWorkshopService(
             @PathVariable String repairOrderId,
             @Valid @RequestBody AddRemoveWorkshopServiceRequest request) {
 
@@ -171,11 +148,8 @@ public class RepairOrderController {
             summary = "Remove Part from Repair Order",
             description = "Removes a part from an existing repair order."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Part removed")
-    })
     @DeleteMapping("/{repairOrderId}/parts")
-    public ResponseEntity<?> removePart(
+    public ResponseEntity<RepairOrderResponseDTO> removePart(
             @PathVariable String repairOrderId,
             @Valid @RequestBody AddRemovePartRequest request) {
 
@@ -190,11 +164,8 @@ public class RepairOrderController {
             summary = "Set Repair Order to In Diagnosis",
             description = "Sets the status of an existing repair order to In Diagnosis."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Repair order updated")
-    })
     @PatchMapping("/{repairOrderId}/status/in-diagnosis")
-    public ResponseEntity<?> inDiagnosis(
+    public ResponseEntity<RepairOrderResponseDTO> inDiagnosis(
             @PathVariable String repairOrderId) {
 
         RepairOrder repairOrder =
@@ -208,11 +179,8 @@ public class RepairOrderController {
             summary = "Start Workshop Service in Repair Order",
             description = "Starts a workshop service in an existing repair order."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Workshop service started")
-    })
     @PatchMapping("/{repairOrderId}/services/{workshopServiceId}/status/start")
-    public ResponseEntity<?> startWorkshopService(
+    public ResponseEntity<RepairOrderResponseDTO> startWorkshopService(
             @PathVariable String repairOrderId,
             @PathVariable String workshopServiceId) {
 
@@ -226,11 +194,8 @@ public class RepairOrderController {
             summary = "Finish Workshop Service in Repair Order",
             description = "Finishes a workshop service in an existing repair order."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Workshop service finished")
-    })
     @PatchMapping("/{repairOrderId}/services/{workshopServiceId}/status/finished")
-    public ResponseEntity<?> finishWorkshopService(
+    public ResponseEntity<RepairOrderResponseDTO> finishWorkshopService(
             @PathVariable String repairOrderId,
             @PathVariable String workshopServiceId,
             @Valid @RequestBody FinishWorkshopServiceRequest request) {
@@ -245,11 +210,8 @@ public class RepairOrderController {
             summary = "Set Repair Order to Approved",
             description = "Sets the status of an existing repair order to Approved."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Repair order updated")
-    })
     @PatchMapping("/{repairOrderId}/status/approved")
-    public ResponseEntity<?> approve(
+    public ResponseEntity<RepairOrderResponseDTO> approve(
             @PathVariable String repairOrderId) {
 
         RepairOrder repairOrder =
@@ -263,11 +225,8 @@ public class RepairOrderController {
             summary = "Set Repair Order to Rejected",
             description = "Sets the status of an existing repair order to Rejected."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Repair order updated")
-    })
     @PatchMapping("/{repairOrderId}/status/rejected")
-    public ResponseEntity<?> reject(
+    public ResponseEntity<RepairOrderResponseDTO> reject(
             @PathVariable String repairOrderId) {
 
         RepairOrder repairOrder =
@@ -281,11 +240,8 @@ public class RepairOrderController {
             summary = "Set Repair Order to Delivered",
             description = "Sets the status of an existing repair order to Delivered."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Repair order updated")
-    })
     @PatchMapping("/{repairOrderId}/status/deliver")
-    public ResponseEntity<?> deliver(
+    public ResponseEntity<RepairOrderResponseDTO> deliver(
             @PathVariable String repairOrderId) {
 
         RepairOrder repairOrder =
@@ -299,11 +255,8 @@ public class RepairOrderController {
             summary = "Set Repair Order to In Execution",
             description = "Sets the status of an existing repair order to In Execution."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Repair order updated")
-    })
     @PatchMapping("/{repairOrderId}/status/in-execution")
-    public ResponseEntity<?> startExecution(
+    public ResponseEntity<RepairOrderResponseDTO> startExecution(
             @PathVariable String repairOrderId) {
 
         RepairOrder repairOrder =
@@ -317,11 +270,8 @@ public class RepairOrderController {
             summary = "Set Repair Order to Awaiting Approval",
             description = "Sets the status of an existing repair order to Awaiting Approval."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Repair order updated")
-    })
     @PatchMapping("/{repairOrderId}/status/awaiting-approval")
-    public ResponseEntity<?> requestApproval(
+    public ResponseEntity<RepairOrderResponseDTO> requestApproval(
             @PathVariable String repairOrderId) {
 
         RepairOrder repairOrder =
